[tool.poetry]
name = "project-1-lisova-m25-555"
version = "0.1.0"
description = "Игра"
authors = ["Olesya Lisova"]
readme = "README.md"

packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.3,<0.14.0)"
]
[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
